# Crypto-Analisa-Bot

./: .replit  README.md  alert_system.py  alerts.db  app.py  pyproject.toml  telegram_bot.py
static/: dashboard.js  index.html
